<resources>
    <string name="app_name">RUO</string>
    <string name="welcom_text">reach your own
        by your device</string>
    <string name="btn_login">btn_login</string>
    <string name="btn_register">btn_register</string>
    <string name="logo_ruo">logo_ruo</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="textLogin">Login To Your Account</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="homepage1">Welcome to RUO. \n
your mental health companion</string>
    <string name="therapy">Therapy</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="textRegister">Make Your Account</string>
    <string name="forget">Forget Password</string>
    <string name="save">Save</string>
    <string name="newPass">New Password</string>
    <string name="confirmNewPass">Confirm New Password</string>
    <string name="changePass">Change Password</string>
    <string name="oldPass">Old Password</string>
    <string name="namaPengguna">Nadini</string>
    <string name="question1">Halo Nadini...\n\nSalam kenal ya aku Terry, sahabat yang akan membantu mu di RUO\n\nGimana kabar mu hari ini?</string>
    <string name="answer1">Click For Answer</string>
    <string name="answerCard">Baik kok, tapi ya begitu deh</string>
    <string name="question2">Terry pernah dengar, pelangi nggak abadi. Tapi senyum kamu harus selalu abadi ya...</string>
    <string name="contact">Contact : </string>
    <string name="no_telp">No. Telp\t\t\t:</string>
    <string name="instagram">Instagram\t:</string>
    <string name="tahun_karir">tahun karir</string>
    <string name="My_Therapy">My Therapy</string>
    <string name="name">Name</string>
    <string name="spesialist">Spesialist</string>
    <string name="long_career">Long Career</string>
    <string name="year_career">Tahun Karir</string>
    <string name="noTelp">No Phone</string>
    <string name="pesan_error">Apakah anda yakin untuk menghapus?</string>
    <string name="start">Ok</string>
    <string name="cancel">Cancel</string>
</resources>