<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_therapy"
        android:enabled="true"
        android:icon="@drawable/baseline_group_24"
        android:title="@string/therapy"
        />
    <item
        android:id="@+id/item_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/item_message"
        android:enabled="true"
        android:icon="@drawable/baseline_article_24"
        android:title="@string/message"
        />

    <item
        android:id="@+id/item_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>
</menu>

